--- a/WebShop/appsettings.json
+++ b/WebShop/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=den1.mssql7.gear.host;Initial Catalog=webshopgroup2;User ID=webshopgroup2;Password=Am9k6q0_0_W5"
+  }
 }
