--- a/WebShop/WebShop.csproj
+++ b/WebShop/WebShop.csproj
@@ -43,6 +43,8 @@
     <Compile Remove="Migrations\20220107092649_FirstMigration.Designer.cs" />
     <Compile Remove="Migrations\20220107094848_FirstMigration.cs" />
     <Compile Remove="Migrations\20220107094848_FirstMigration.Designer.cs" />
+    <Compile Remove="Migrations\20220112092429_Added roles.cs" />
+    <Compile Remove="Migrations\20220112092429_Added roles.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -66,6 +68,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="ModalJS.Mvc" Version="1.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
