--- a/WebShop/WebShop.csproj
+++ b/WebShop/WebShop.csproj
@@ -57,6 +57,10 @@
     <Compile Remove="Migrations\20220117133921_Corrected UserId in OrderChart.Designer.cs" />
     <Compile Remove="Migrations\20220118174507_Added ImageFile to ProductModel.cs" />
     <Compile Remove="Migrations\20220118174507_Added ImageFile to ProductModel.Designer.cs" />
+    <Compile Remove="Migrations\20220120172232_Fix DataBase.cs" />
+    <Compile Remove="Migrations\20220120172232_Fix DataBase.Designer.cs" />
+    <Compile Remove="Migrations\20220120172915_Fixed DataBase.cs" />
+    <Compile Remove="Migrations\20220120172915_Fixed DataBase.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
