--- a/WebShop/appsettings.json
+++ b/WebShop/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=den1.mssql7.gear.host;Initial Catalog=webshopgroup2;User ID=webshopgroup2;Password=Am9k6q0_0_W5"
+    "DefaultConnection": "Data Source=den1.mssql8.gear.host;Initial Catalog=webshopgroup2;User ID=webshopgroup2;Password=Yg2d-5Nl-dNq"
   }
 }
